--- a/client/src/Pages/Questions/Questions.css
+++ b/client/src/Pages/Questions/Questions.css
@@ -1,50 +1,66 @@
-.question-details-page{
-    /* width: calc( 100% - 300px - 24px); */
-    width: calc(100%-24px);
+.question-details-page {
+    width: calc(100% - 300px - 24px);
     float: left;
     margin: 25px 0px;
     padding: 0px;
 }
 
-.question-details-container{
+@media (max-width:1024px) {
+    .question-details-page {
+        display: flex;
+        flex-direction: column;
+        width: calc(100% - 24px);
+        float: left;
+        margin: 25px 0px;
+        padding: 0px;
+    }
+}
+
+.question-details-container {
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.112);
 }
-.question-details-container-2{
+
+.question-details-container-2 {
     display: flex;
     /* flex-direction: column; */
 }
-.question-details-container .question-votes{
+
+.question-details-container .question-votes {
     padding: 5px 20px 5px 10px;
     align-items: flex-start;
 }
-.question-votes p{
+
+.question-votes p {
     margin: 0%;
     font-size: 25px;
     text-align: left;
 }
-.votes-icon{
+
+.votes-icon {
     font-size: 40px;
     cursor: pointer;
     color: rgb(206, 203, 203);
 }
-.votes-icon:active{
+
+.votes-icon:active {
     color: #ef8236;
 }
-.question-details-container .question-body{
+
+.question-details-container .question-body {
     line-height: 22px;
     white-space: pre-line;
 }
 
-.question-details-container .question-details-tags{
+.question-details-container .question-details-tags {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
 .question-details-container .question-details-tags p,
-.post-ans-container p .ans-tags{
+.post-ans-container p .ans-tags {
     padding: 5px 5px;
     margin: 3px;
     font-size: 13px;
@@ -54,14 +70,16 @@
     text-decoration: none;
     line-height: 22px;
 }
-.question-actions-user{
+
+.question-actions-user {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.question-actions-user button, .edit-question-btn{
+.question-actions-user button,
+.edit-question-btn {
     background-color: transparent;
     border: none;
     padding: 5px 0px;
@@ -72,25 +90,30 @@
     font-size: 14px;
     transition: 0.3s;
 }
-.question-actions-user button:active{
+
+.question-actions-user button:active {
     border-bottom: solid 2px black;
 }
-.question-actions-user div:nth-child(2) p, 
-.question-actions-user div:nth-child(2) .user-link{
+
+.question-actions-user div:nth-child(2) p,
+.question-actions-user div:nth-child(2) .user-link {
     text-decoration: none;
     font-size: 14px;
     margin: 0%;
 }
-.user-link{
+
+.user-link {
     display: flex;
     align-items: center;
 }
-.user-link div{
+
+.user-link div {
     padding-left: 10px;
 }
+
 /* post answer container */
 
-.post-ans-container form textarea{
+.post-ans-container form textarea {
     padding: 10px;
     border: solid 1px rgba(0, 0, 0, 0.3);
     font-family: 'Roboto', sans-serif;
@@ -98,7 +121,7 @@
     resize: vertical;
 }
 
-.post-ans-container form .post-ans-btn{
+.post-ans-container form .post-ans-btn {
     margin: 20px 0px;
     padding: 10px 10px;
     background-color: #009dff;
@@ -109,18 +132,18 @@
     transition: 0.5s all;
 }
 
-.post-ans-container form .post-ans-btn:hover{
+.post-ans-container form .post-ans-btn:hover {
     background-color: #0086d8;
 }
 
 /* Display answer container */
 
-.display-ans{
+.display-ans {
     padding-bottom: 20px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.112);
 }
 
-.display-ans p{
+.display-ans p {
     font-size: 14px;
     line-height: 18px;
     white-space: pre-line;
